# wordle-in-c

./: CMakeLists.txt  README.md  main.c
include/: dictionary.h  wordle.h
src/: collision_manager.c  display_manager.c  game_loop.c  nav_button_manager.c  text.c  word_manager.c  wordle.c  wordle_words.c
